# adsb-decode

./: .gitignore  CLAUDE.md  HOW-IT-WORKS.docx  HOW-IT-WORKS.md  README.md  ROADMAP.md  SOUL.md  STYLE.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
data/: live_capture.txt
deploy/: Caddyfile  adsb-decode-healthcheck.service  adsb-decode-healthcheck.sh  adsb-decode-healthcheck.timer  adsb-decode.service  adsb-feeder.service  adsb-receiver.service  ais-ingester.service  deploy.sh  gunicorn.conf.py  receiver-setup.sh  server-setup.sh  wsgi.py
docs/: ais-ingester-runbook.md  client-error-logging.md  schema-discipline.md
rust/: Cargo.toml  Cross.toml
rust/adsb-core/: Cargo.toml
rust/adsb-core/src/: airports.csv  anomaly.rs  comm_b.rs  config.rs  cpr.rs  crc.rs  decode.rs  demod.rs  enrich.rs  filter.rs  frame.rs  icao.rs  lib.rs  tracker.rs  types.rs
rust/adsb-feeder/: Cargo.toml
rust/adsb-feeder/src/: capture.rs  main.rs
rust/adsb-receiver/: Cargo.toml
rust/adsb-receiver/src/: capture.rs  main.rs  sender.rs  stats.rs
rust/adsb-server/: Cargo.toml
rust/adsb-server/src/: ais.rs  baseline.rs  db.rs  db_pg.rs  demo.rs  feedback.rs  main.rs  notification.rs  raw_sink.rs  tle_cache.rs
rust/adsb-server/src/web/: ingest.rs  mod.rs  pages.rs  routes.rs
rust/adsb-server/templates/: about.html  detail.html  error-report.js  events.html  features.html  how-it-works.html  map.html  map.js  query.html  receivers.html  register.html  replay.html  setup.html  stats.html  table.html
rust/adsb-server/tests/: cli_dispatch.rs  timescale_invariants.rs
scripts/: capture-frames.sh  capture-iq.sh  cross_validate.py  cross_validate_debug.json  install-feeder.sh  release.sh  seed-tle.sh  setup-rtlsdr.sh  validate-hardware.sh
src/: __init__.py  capture.py  cli.py  config.py  cpr.py  crc.py  database.py  decoder.py  demodulator.py  enrichment.py  exporters.py  feeder.py  filters.py  frame_parser.py  hardware.py  icao.py  notifications.py  tracker.py
src/web/: app.py  ingest.py  routes.py
src/web/templates/: base.html  detail.html  events.html  map.html  query.html  receivers.html  replay.html  stats.html  table.html
tests/: conftest.py  test_capture.py  test_cli.py  test_config.py  test_cpr.py  test_crc.py  test_database.py  test_decoder.py  test_demodulator.py  test_enrichment.py  test_exporters.py  test_feeder.py  test_filters.py  test_frame_parser.py  test_hardware.py  test_icao.py  test_ingest.py  test_notifications.py  test_tracker.py  test_web.py
tests/fixtures/: known_frames.py
tests/setup/: test_receiver_setup.sh
