[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adsb-decode"
version = "0.1.0"
description = "ADS-B radio protocol decoder — from raw RF samples to identified aircraft on a map"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "click>=8.0",
    "flask>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
rtlsdr = [
    "pyrtlsdr>=0.3.0",
]
feeder = [
    "requests>=2.28",
]
web = [
    "gunicorn>=21.0",
]

[project.scripts]
adsb = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
