[package]
name = "adsb-feeder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ADS-B IQ sample demodulation and RTL-SDR data ingestion"

[[bin]]
name = "adsb-feeder"
path = "src/main.rs"

[dependencies]
adsb-core = { path = "../adsb-core" }
clap = { version = "4", features = ["derive"] }
