[package]
name = "adsb-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "adsb"
path = "src/main.rs"

[dependencies]
adsb-core = { path = "../adsb-core" }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
