[package]
name = "adsb-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "adsb"
path = "src/main.rs"

[features]
default = []
timescaledb = ["dep:sqlx"]

[dependencies]
adsb-core = { path = "../adsb-core" }
async-trait = "0.1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"], optional = true }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
