[package]
name = "adsb-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ADS-B tracking CLI and web dashboard with SQLite persistence"

[[bin]]
name = "adsb"
path = "src/main.rs"

[features]
default = []
timescaledb = ["dep:sqlx"]
native-sdr = ["adsb-feeder/native-sdr"]

[dependencies]
adsb-core = { path = "../adsb-core" }
adsb-feeder = { path = "../adsb-feeder" }
async-trait = "0.1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"], optional = true }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
http = "1"
tower-http = { version = "0.6", features = ["cors", "set-header"] }

[dev-dependencies]
tempfile = "3"
